# python-wekan

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  .wekan  .wekan.example  CLAUDE.md  LICENSE  Makefile  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt  session.cast  setup.py
.github/workflows/: ci.yml  python-app.yml
tests/: api_integration_test.py  backend_coverage_test.py  cases_test.py  cli_config_test.py  cli_integration_test.py  enhancements_test.py  test_cases.py  test_cli_integration.py  test_enhancements.py  test_unit.py  unit_test.py
wekan/: __init__.py  base.py  board.py  card.py  card_checklist.py  card_checklist_item.py  card_comment.py  customfield.py  integration.py  label.py  swimlane.py  user.py  wekan_client.py  wekan_list.py
wekan/cli/: __init__.py  board_context.py  config.py  main.py  navigation.py
wekan/cli/commands/: auth.py  boards.py  config.py
